Fixed button overlap

--- a/contact.css
+++ b/contact.css
@@ -30,7 +30,7 @@ textarea {
   font-size: 125%;
 }
 button {
-  float: right;
+  float:  left;
 }
 #name, #email {
   width: 50%;
